@@ -11,7 +11,7 @@ class LandLayerMixin(object):
     precision = settings.LAYER_PRECISION_LAND
     simplify = settings.LAYER_SIMPLIFY_LAND
 
-    @method_decorator(cache_page(60 * 60 * 24, cache="fat"))
+    @method_decorator(cache_page(settings.CACHE_TIMEOUT_LAND_LAYERS, cache="fat"))
     def dispatch(self, request, *args, **kwargs):
         return super(LandLayerMixin, self).dispatch(request, *args, **kwargs)
 
